--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-fastapi >= 0.104.1
+fastapi[all] >= 0.104.1
 uvicorn >= 0.24.0
-sunpy[net,map]
 ultralytics
 arccnet[models]@git+https://github.com/ARCAFF/ARCCnet.git
