--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,12 +6,12 @@ repos:
       - id: ruff-check
         args: ["--fix"]
       # Run the formatter.
-#      - id: ruff-format
+      - id: ruff-format
   - repo: https://github.com/PyCQA/isort
     rev: 7.0.0
     hooks:
       - id: isort
-        args: ["--profile black"]
+        args: ["--balanced", "-m", "3", "--tc"]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
